alvr/server/cpp/alvr_server/bindings.h

struct FfiFov {
    float left;
    float right;
    float up;
    float down;
};
struct FfiQuat {
    float x;
    float y;
    float z;
    float w;
};
struct FfiHandSkeleton {
    float jointPositions[26][3];
    FfiQuat jointRotations[26];
};
struct FfiDeviceMotion {
    unsigned long long deviceID;
    FfiQuat orientation;
    float position[3];
    float linearVelocity[3];
    float angularVelocity[3];
};
enum FfiOpenvrPropertyType {
    Bool,
    Float,
    Int32,
    Uint64,
    Vector3,
    Double,
    String,
};
union FfiOpenvrPropertyValue {
    unsigned int bool_;
    float float_;
    int int32;
    unsigned long long uint64;
    float vector3[3];
    double double_;
    char string[256];
};
struct FfiOpenvrProperty {
    unsigned int key;
    FfiOpenvrPropertyType type;
    FfiOpenvrPropertyValue value;
};