target/debug/build/alvr_server-72cca23adabe7b9b/out/bindings.rs

/* automatically generated by rust-bindgen 0.65.1 */

#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct FfiFov {
    pub left: f32,
    pub right: f32,
    pub up: f32,
    pub down: f32,
}
#[test]
fn bindgen_test_layout_FfiFov() {
    const UNINIT: ::std::mem::MaybeUninit<FfiFov> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<FfiFov>(),
        16usize,
        concat!("Size of: ", stringify!(FfiFov))
    );
    assert_eq!(
        ::std::mem::align_of::<FfiFov>(),
        4usize,
        concat!("Alignment of ", stringify!(FfiFov))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).left) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiFov),
            "::",
            stringify!(left)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).right) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiFov),
            "::",
            stringify!(right)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).up) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiFov),
            "::",
            stringify!(up)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).down) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiFov),
            "::",
            stringify!(down)
        )
    );
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct FfiQuat {
    pub x: f32,
    pub y: f32,
    pub z: f32,
    pub w: f32,
}
#[test]
fn bindgen_test_layout_FfiQuat() {
    const UNINIT: ::std::mem::MaybeUninit<FfiQuat> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<FfiQuat>(),
        16usize,
        concat!("Size of: ", stringify!(FfiQuat))
    );
    assert_eq!(
        ::std::mem::align_of::<FfiQuat>(),
        4usize,
        concat!("Alignment of ", stringify!(FfiQuat))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiQuat),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiQuat),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).z) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiQuat),
            "::",
            stringify!(z)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).w) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiQuat),
            "::",
            stringify!(w)
        )
    );
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct FfiHandSkeleton {
    pub jointPositions: [[f32; 3usize]; 26usize],
    pub jointRotations: [FfiQuat; 26usize],
}
#[test]
fn bindgen_test_layout_FfiHandSkeleton() {
    const UNINIT: ::std::mem::MaybeUninit<FfiHandSkeleton> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<FfiHandSkeleton>(),
        728usize,
        concat!("Size of: ", stringify!(FfiHandSkeleton))
    );
    assert_eq!(
        ::std::mem::align_of::<FfiHandSkeleton>(),
        4usize,
        concat!("Alignment of ", stringify!(FfiHandSkeleton))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).jointPositions) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiHandSkeleton),
            "::",
            stringify!(jointPositions)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).jointRotations) as usize - ptr as usize },
        312usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiHandSkeleton),
            "::",
            stringify!(jointRotations)
        )
    );
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct FfiDeviceMotion {
    pub deviceID: ::std::os::raw::c_ulonglong,
    pub orientation: FfiQuat,
    pub position: [f32; 3usize],
    pub linearVelocity: [f32; 3usize],
    pub angularVelocity: [f32; 3usize],
}
#[test]
fn bindgen_test_layout_FfiDeviceMotion() {
    const UNINIT: ::std::mem::MaybeUninit<FfiDeviceMotion> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<FfiDeviceMotion>(),
        64usize,
        concat!("Size of: ", stringify!(FfiDeviceMotion))
    );
    assert_eq!(
        ::std::mem::align_of::<FfiDeviceMotion>(),
        8usize,
        concat!("Alignment of ", stringify!(FfiDeviceMotion))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).deviceID) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiDeviceMotion),
            "::",
            stringify!(deviceID)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).orientation) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiDeviceMotion),
            "::",
            stringify!(orientation)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).position) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiDeviceMotion),
            "::",
            stringify!(position)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).linearVelocity) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiDeviceMotion),
            "::",
            stringify!(linearVelocity)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).angularVelocity) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiDeviceMotion),
            "::",
            stringify!(angularVelocity)
        )
    );
}
pub const FfiOpenvrPropertyType_Bool: FfiOpenvrPropertyType = 0;
pub const FfiOpenvrPropertyType_Float: FfiOpenvrPropertyType = 1;
pub const FfiOpenvrPropertyType_Int32: FfiOpenvrPropertyType = 2;
pub const FfiOpenvrPropertyType_Uint64: FfiOpenvrPropertyType = 3;
pub const FfiOpenvrPropertyType_Vector3: FfiOpenvrPropertyType = 4;
pub const FfiOpenvrPropertyType_Double: FfiOpenvrPropertyType = 5;
pub const FfiOpenvrPropertyType_String: FfiOpenvrPropertyType = 6;
pub type FfiOpenvrPropertyType = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Copy, Clone)]
pub union FfiOpenvrPropertyValue {
    pub bool_: ::std::os::raw::c_uint,
    pub float_: f32,
    pub int32: ::std::os::raw::c_int,
    pub uint64: ::std::os::raw::c_ulonglong,
    pub vector3: [f32; 3usize],
    pub double_: f64,
    pub string: [::std::os::raw::c_char; 256usize],
}
#[test]
fn bindgen_test_layout_FfiOpenvrPropertyValue() {
    const UNINIT: ::std::mem::MaybeUninit<FfiOpenvrPropertyValue> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<FfiOpenvrPropertyValue>(),
        256usize,
        concat!("Size of: ", stringify!(FfiOpenvrPropertyValue))
    );
    assert_eq!(
        ::std::mem::align_of::<FfiOpenvrPropertyValue>(),
        8usize,
        concat!("Alignment of ", stringify!(FfiOpenvrPropertyValue))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).bool_) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiOpenvrPropertyValue),
            "::",
            stringify!(bool_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).float_) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiOpenvrPropertyValue),
            "::",
            stringify!(float_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).int32) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiOpenvrPropertyValue),
            "::",
            stringify!(int32)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).uint64) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiOpenvrPropertyValue),
            "::",
            stringify!(uint64)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).vector3) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiOpenvrPropertyValue),
            "::",
            stringify!(vector3)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).double_) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiOpenvrPropertyValue),
            "::",
            stringify!(double_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).string) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiOpenvrPropertyValue),
            "::",
            stringify!(string)
        )
    );
}
impl Default for FfiOpenvrPropertyValue {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct FfiOpenvrProperty {
    pub key: ::std::os::raw::c_uint,
    pub type_: FfiOpenvrPropertyType,
    pub value: FfiOpenvrPropertyValue,
}
#[test]
fn bindgen_test_layout_FfiOpenvrProperty() {
    const UNINIT: ::std::mem::MaybeUninit<FfiOpenvrProperty> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<FfiOpenvrProperty>(),
        264usize,
        concat!("Size of: ", stringify!(FfiOpenvrProperty))
    );
    assert_eq!(
        ::std::mem::align_of::<FfiOpenvrProperty>(),
        8usize,
        concat!("Alignment of ", stringify!(FfiOpenvrProperty))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).key) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiOpenvrProperty),
            "::",
            stringify!(key)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiOpenvrProperty),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).value) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiOpenvrProperty),
            "::",
            stringify!(value)
        )
    );
}
impl Default for FfiOpenvrProperty {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
